src/app/page/page.component.css
/***** Elements *****/
html {
  background-color: white !important;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
  margin-bottom: 0;
}

h4 {
  font-size: 24px;
  line-height: 30px;
  font-weight: 300;
}

p {
  line-height: 24px;
}

/***** High level *****/
.outerbox {
  width: 100%;
  min-width: 320px;
  max-width: 768px;
  margin: 0 auto;
}

.mw568 {
  width: calc(100% - 48px);
  margin-left: 24px;
  margin-right: 24px;
}
.mw568.kg-bg-gray-light {
  margin-left: 0;
  margin-right: 0;
  padding-left: 24px;
  padding-right: 24px;
}

/***** Language Selector *****/
.language-selector-toggle {
  line-height: 36px;
  padding: 12px 24px;
  cursor: pointer;
}

.language-selector-toggle .fas {
  margin-left: 5px;
}

/***** Buttons *****/
.button {
  cursor: pointer;
  font-size: 20px;
  line-height: 46px;
  border: var(--kg-blue) 1px solid;
  color: var(--kg-white);
  background-color: var(--kg-blue);
  border-radius: 50px;
  display: inline-block;
  padding-left: 15px;
  padding-right: 15px;
}
.button.button-white {
  color: var(--kg-blue);
  background-color: var(--kg-white);
}
.button:hover {
  color: var(--kg-white) !important;
  background-color: var(--kg-blue-light) !important;
  border-color: var(--kg-blue-light) !important;
}

/***** Tool Header *****/
#toolHeader {
  position: relative;
  z-index: 1;
}

/***** Tool Navigation *****/
#tool-navigation .button {
  width: 120px;
  font-size: 14.4px;
}
#tool-navigation .button:first-child:not(:last-child) {
  border-right-width: 0;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}
#tool-navigation .button:last-child:not(:first-child) {
  border-left-width: 0;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}
#tool-navigation .button:first-child:last-child {
  border-width: 1px;
}
.firstPage #tool-navigation .button,
.lastPage #tool-navigation .button {
  width: 240px;
}

/***** Content *****/

.firstHeading {
  margin-top: 48px;
  margin-bottom: 31px !important;
}

p.firstContent {
  font-size: 20px;
}

.stepHeading {
  padding-top: 25px;
  padding-bottom: 25px;
  color: white;
  background-color: var(--kg-blue);
}

.stepHeading h1 {
  position: relative;
  font-size: 24px;
  line-height: 30px;
  color: white;
  font-weight: 300;
}

.stepHeading span {
  margin-right: 12px;
}

.stepHeading h1[dir='rtl'] span {
  margin-left: 12px;
}

.imageContent {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.arrayContent span {
  display: block;
}

.calltoaction {
  text-align: center;
  font-weight: 300;
  font-size: 24px;
  line-height: 30px;
}

.cardHeading + .cardButton {
  margin-top: 48px;
}

.cardButton {
  text-align: center;
}

.cardButton + .cardButton {
  margin-top: 12px;
}

.buttonContent .button {
  min-width: 200px;
  max-width: 100%;
}

.linkContent {
  text-align: center;
  margin-top: 24px;
  width: 100%;
  display: inherit;
}

.linkContent a {
  color: #3ba4db;
  cursor: pointer;
}

/***** Forms *****/

.formContent label {
  display: block;
  font-size: 16px;
  color: var(--kg-blue);
  line-height: 20px;
}

.formContent label + .form-control {
  margin-top: 10px;
}

.formContent .form-control {
  display: block;
  width: 100%;
  padding: 12px;
  font-size: 16px;
  font-family: 'Source Sans Pro', sans-serif;
  border: 1px solid #3ba4db;
  border-radius: 8px;
}

.formContent .cardLink a {
  color: var(--kg-blue);
  cursor: pointer;
}

/***** Footer *****/
footer {
  position: relative;
  padding: 12px 24px;
  border-top: var(--kg-gray-light) 2px solid;
  font-size: 11px;
  text-align: left;
}

footer span {
  display: block;
  line-height: 20px;
  white-space: nowrap;
  text-align: center;
  padding-left: 24px;
  padding-right: 24px;
}

/***** Other *****/
.rtlpageno {
  margin-top: -8%;
  line-height: 30px;
}

.langicon {
  width: auto;
  float: left;
  margin-top: 10px;
  margin-right: 8px;
}

.pending-count {
  position: absolute;
  text-align: right;
  right: 105px;
  top: 19px;
}

.top {
  margin-top: -7%;
}

a.kg-bg-gray:hover {
  background-color: #e4e0e0;
  color: #bebebe;
}

a.kg-bg-blue:hover {
  background-color: #7fbfe0;
  color: #3ba4db;
}

#languageList {
  background-color: #f0f0f0;
}

#languageList ul {
  columns: 2;
  margin: 0;
  padding: 0;
}

#languageList li {
  margin: 0;
  padding: 4px 16px;
  list-style-type: none;
  border-radius: 16px;
  line-height: 1.25;
}

#languageList li:hover {
  background-color: white;
  cursor: pointer;
}

/* Content vertical spacing */

#toolContent > *:not(.firstHeading):not(.stepHeading),
#toolContent .cardContent *:not(.cardHeading) {
  margin-top: 24px;
}

#toolContent > .textContent + .textContent,
#toolContent > .arrayContent > span + span,
#toolContent > .textContent + .buttonContent,
#toolContent .cardContent > .textContent + .textContent,
#toolContent .cardContent > .arrayContent > span + span,
#toolContent .cardContent > .textContent + .arrayContent,
#toolContent > .tabContent > .textContent + .textContent,
#toolContent .cardContent .buttonContent + .buttonContent,
#toolContent .formContent label + input {
  margin-top: 12px;
}

#toolContent > *.imageContent:first-child,
#toolContent .firstHeading + .imageContent,
#toolContent .stepHeading + .imageContent,
#toolContent .cardContent .cardHeading,
#toolContent .cardContent .arrayContent span:first-child,
#toolContent .cardContent .buttonContent a,
#toolContent .cardContent .textContent * {
  margin-top: 0;
}

#toolContent > .textContent + .buttonContent + .textContent,
#toolContent > .textContent + .buttonContent.buttonDone {
  margin-top: 32px;
}

#toolContent > .stepHeading + *:not(.imageContent) {
  margin-top: 48px;
}

.calltoaction,
#tool-navigation,
#toolFooter {
  margin-top: 48px !important;
}

/***** Responsive *****/
@media screen and (min-width: 440px) {
  .stepHeading h1,
  h4 {
    font-size: 32px;
    line-height: 1.1667;
    font-weight: 200;
  }
  .calltoaction {
    font-weight: 200;
  }
  footer {
    padding: 12px 0;
  }
  footer span {
    display: inline-block;
    text-align: left;
  }
  footer span:last-child {
    float: right;
  }
}
@media screen and (min-width: 550px) {
  #languageList ul {
    columns: 3;
  }
}

@media screen and (max-width: 615px) {
  .px44 {
    padding-left: 0;
    padding-right: 0;
  }
  .mx44 {
    margin-left: 0;
    margin-right: 0;
  }
}

@media screen and (min-width: 616px) {
  /* 568 + 48 */
  .mw568 {
    max-width: 568px;
    width: 100%;
    margin-left: auto;
    margin-right: auto;
  }

  .indent {
    padding-left: 44px;
    padding-right: 44px;
  }
}

@media screen and (min-width: 768px) {
  .stepHeading {
    min-height: 124px;
  }
  .stepHeading.noCounter {
    min-height: unset;
    text-align: center;
  }

  .stepHeading.tenSteps h1 {
    padding-left: 40px;
  }

  .stepHeading span {
    position: absolute;
    top: -10px;
    left: -64px;
    margin-left: 0;
    margin-right: 0;
    font-weight: 200;
    font-size: 90px;
    line-height: 1;
  }

  .stepHeading h1[dir='rtl'] span {
    left: auto;
    right: -64px;
  }
}

